new proj/src/objects/Field_of_Play__c.object
<CustomObject>
    <description>SAM Integration for Multiple Gold Sheets</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SAM Field of Play Gold Sheet Integration</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field of Play</relationshipLabel>
        <relationshipName>Field_of_Play</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier1__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier2__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Business_Tier1__c</controllingField>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier3__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Business_Tier2__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services Multi P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Water Solutions (IWS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS Electrical Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_STATUS__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mh_Additional_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Additional Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Associated_Gold_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration FOP</description>
        <label>Associated Gold Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Charter_Statement__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Charter Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Critical_Vulnerability__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Critical Vulnerability</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_Opportunites__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP Opportunites</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_Trends__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP Trends</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_1_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View 1 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_3_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View 3 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_Last_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View Last Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_Now__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View Now</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Goals__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Last_Updated_Gold_Sheet__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Last Updated Gold Sheet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Managers Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Review_Date__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Managers Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Our_Strategic_Strengths__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our Strategic Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_1_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View 1 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_3_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View 3 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_Last_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View Last Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_Now__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View Now</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Field of Play</label>
    <nameField>
        <label>Field of Play Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field of Play</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>